hard-gists/769687/run.log
=== Docker Run Log for 769687 ===
Started at: Mi 29. Okt 17:15:57 CET 2025

[2025-10-29 17:15:57] START: Running container for 769687
[2025-10-29 17:15:57] SUCCESS: Container ea234c70a920bea9806458ba773bd1a5dc8aee5d3ac7d5ef41e3729581452c33 started for 769687
=== Container logs for 769687 ===
  File "/snippet.py", line 35
    print "Jim's tasks are:"
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 769687 ===
[2025-10-29 17:15:59] INFO: Container ea234c70a920bea9806458ba773bd1a5dc8aee5d3ac7d5ef41e3729581452c33 has stopped
